# distributed-zkml

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  slow-tests.yml
examples/: simple_distributed.py
python/: __init__.py  rust_prover.py
src/: lib.rs
src/distributed/: chunk.rs  merkle_proof.rs  mod.rs
src/ray/: batch.rs  mod.rs  shared.rs  worker.rs
tests/: README.md  README_tests.md  simple_distributed.py
tests/aws/: NEXT_STEPS.md  QUICK_START.md  README.md  __init__.py  aws_setup_guide.md  find_ami.sh  gpu_test.py  manage_aws_instance.sh  setup_aws_resources.sh
zkml/: .gitignore  ARCHITECTURE.md  COMMIT_READY.sh  COMMIT_SUMMARY.md  COMPONENT_DIAGRAM.md  Cargo.toml  DEV_BRANCH_NOTES.md  DISTRIBUTED_PROOFS_README.md  README_NEXT_STEPS.md
zkml/halo2/halo2_proofs/: Cargo.toml
zkml/halo2/halo2_proofs/src/: arithmetic.rs  gpu_msm.rs  gpu_ntt.rs  lib.rs
zkml/src/: commitments.rs  lib.rs  model.rs
zkml/src/commitments/: merkle.rs
zkml/src/distributed/: chunk.rs  merkle_proof.rs
zkml/src/layers/: dag.rs
zkml/src/ray/: batch.rs  shared.rs  worker.rs
zkml/src/utils/: proving_kzg.rs
zkml/testing/: README.md  chunk_execution_test.rs  chunk_proof_test.rs  gpu_benchmark_test.rs  merkle_tree_test.rs  test_merkle_root_public.rs
