[package]
name = "distributed-zkml"
version = "0.1.0"
edition = "2021"
description = "Distributed proving for zkml using Ray, layer-wise partitioning, and Merkle trees"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ray-project/distributed-zkml"

[dependencies]
# Note: zkml is kept as path dependency because it includes our Merkle tree modifications
# In production, this would be a git dependency to a fork or upstream once changes are merged
zkml = { path = "zkml" }
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

