[project]
name = "distributed-zkml"
version = "0.1.0"
description = "Distributed proving for zkml using Ray"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "ray[default]>=2.31.0",
    "msgpack>=1.0.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
